# Angulust-Resume

./: .gitignore  Dockerfile  KET_PAIR.pem  Pem.pem  README.md  awsDockerBuild  docker-compose.yml  dockethome  package.json  password.txt
angular/: htmptrash  package-lock.json
angular/resup/: README.md  angular.json  (+3 more)
rust/rustume/: .env  Cargo.toml  Rocket.toml  trtash
rust/rustume/migrations/2023-05-27-021635_rustume/: down.sql  up.sql
rust/rustume/src/: admin.rs  authentication.rs  client_access.rs  main.rs  models.rs  schema.rs
rust/rustume/src/admin/: get.rs
rust/rustume/src/admin/admin_user_access/: user.rs
rust/rustume/src/admin/review_routes/: review.rs
rust/rustume/src/admin/user_routes/: user.rs
rust/rustume/src/admin_access/: admin.rs  mod.rs
rust/rustume/src/admin_access/review_routes/: review.rs
rust/rustume/src/admin_access/user_routes/: mod.rs  tests.rs  user.rs
rust/rustume/src/authentication/: cookie.rs  login.rs  signup.rs
rust/rustume/src/authentications/: authentication.rs
rust/rustume/src/authentications/authentication/: cookie.rs  login.rs  tests.rs
rust/rustume/src/chat/: room.rs
rust/rustume/src/client_access/: mod.rs  personal_info.rs
rust/rustume/src/models/: client.rs  client_to_reference.rs  credential.rs  mod.rs  personal_reference.rs  reviews.rs  user.rs
rust/rustume/src/models/admin/: clients.rs  mod.rs
rust/rustume/src/models/user/: message.rs  room.rs
rust/rustume/static/resup/: index.html  main.05d9e70c4dae359e.js  main.8b15bd929fab13dd.js  polyfills.a8cf0479f4aa0fa8.js  runtime.d530792d84373dae.js
(+50 files in other folders)
